--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Horiseon Marketing</title>
+    <title>Horiseon Digital Marketing</title>
   </head>
 
   <body>
@@ -25,7 +25,7 @@
         </ul>
       </nav>
     </header>
-    <figure class="hero"></figure>
+    <figure class="hero" alt="marketing team in a meeting"></figure>
     <main class="content">
       <section
         id="search-engine-optimization"
@@ -51,6 +51,7 @@
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
+          alt="person sitting at a laptop looking at a reputation chart"
         />
         <h2>Online Reputation Management</h2>
         <p>
@@ -65,6 +66,7 @@
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
+          alt="social media related icons sitting on a table"
         />
         <h2>Social Media Marketing</h2>
         <p>
@@ -78,7 +80,10 @@
     <aside class="benefits">
       <section class="benefit-lead">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <img
+          src="./assets/images/lead-generation.png"
+          alt="lead generation icon"
+        />
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
@@ -86,7 +91,10 @@
       </section>
       <section class="benefit-brand">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <img
+          src="./assets/images/brand-awareness.png"
+          alt="brand awareness icon"
+        />
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
@@ -94,7 +102,10 @@
       </section>
       <section class="benefit-cost">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <img
+          src="./assets/images/cost-management.png"
+          alt="cost management icon"
+        />
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
@@ -102,7 +113,7 @@
       </section>
     </aside>
     <footer>
-      <h2>Made with ❤️️ by Horiseon</h2>
+      <h4>Made with ❤️️ by Horiseon</h4>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
     </footer>
   </body>
